--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ menu:
 
 # Configure the text (or "translation key") to be used on the
 # non-global metadata tab.
-non_global_metadata: indicator.national_metadata
+non_global_metadata: indicator.regional_metadata
 
 # The list of languages that are translated. The first one is the default.
 languages:
